fix cart alignment

--- a/milestone_3.css
+++ b/milestone_3.css
@@ -52,9 +52,10 @@ div.absolute{
 }
 
 #cart{
-    position: absolute;
+    position: fixed;
     bottom:0;
     right:0;
+
 }
 
 #message{
